--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
        - cmake --build . --target install
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - unzip -q -o tubex_test_win.zip
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -107,7 +107,7 @@ jobs:
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - unzip -q -o tubex_test_win.zip
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -130,7 +130,7 @@ jobs:
 #     before_install: 
 #       - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 #     script: 
-#       - "docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster /bin/bash -c \"uname -a && cat /etc/os-release && cd ${PWD} && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake git flex bison && lsb_release -a && git clone -b develop https://github.com/lebarsfa/ibex-lib.git && cd ibex-lib && mkdir build ; cd build && cmake -D CMAKE_INSTALL_PREFIX=../../ibex -D CMAKE_CXX_FLAGS=-fPIC -D CMAKE_C_FLAGS=-fPIC -D INTERVAL_LIB=filib .. && cmake --build . --target install && cd ../.. && git clone -b windows https://github.com/lebarsfa/tubex-lib && cd tubex-lib && git submodule init ; git submodule update && mkdir build ; cd build && cmake -D CMAKE_PREFIX_PATH=../ibex -D CMAKE_INSTALL_PREFIX=../../tubex .. && cmake --build . --target install && cd ../.. && wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip && unzip -q -o tubex_test_win.zip && rm -Rf tubex_test_win.zip && cd tubex_test_win && mv test .. && cd ../test && rm -Rf ../tubex_test_win && cmake . && cmake --build . && ./my_project \""
+#       - "docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster /bin/bash -c \"uname -a && cat /etc/os-release && cd ${PWD} && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake git flex bison && lsb_release -a && git clone -b develop https://github.com/lebarsfa/ibex-lib.git && cd ibex-lib && mkdir build ; cd build && cmake -D CMAKE_INSTALL_PREFIX=../../ibex -D CMAKE_CXX_FLAGS=-fPIC -D CMAKE_C_FLAGS=-fPIC -D INTERVAL_LIB=filib .. && cmake --build . --target install && cd ../.. && git clone -b windows https://github.com/lebarsfa/tubex-lib && cd tubex-lib && git submodule init ; git submodule update && mkdir build ; cd build && cmake -D CMAKE_PREFIX_PATH=../ibex -D CMAKE_INSTALL_PREFIX=../../tubex .. && cmake --build . --target install && cd ../.. && wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv && unzip -q -o tubex_test_win.zip && rm -Rf tubex_test_win.zip && cd tubex_test_win && mv test .. && cd ../test && rm -Rf ../tubex_test_win && cmake . && cmake --build . && ./my_project \""
 
    - name: "Mac OS Xcode 10.1"
      os: osx
@@ -150,7 +150,7 @@ jobs:
        - cmake --build . --target install
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - unzip -q -o tubex_test_win.zip
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -182,7 +182,7 @@ jobs:
        - cmake --build . --config Debug --target install
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - 7z x tubex_test_win.zip -y
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -231,7 +231,7 @@ jobs:
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - 7z x tubex_test_win.zip -y
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -272,7 +272,7 @@ jobs:
        - cmake --build . --config Debug --target install
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - 7z x tubex_test_win.zip -y
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -321,7 +321,7 @@ jobs:
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - 7z x tubex_test_win.zip -y
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -371,7 +371,7 @@ jobs:
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - 7z x tubex_test_win.zip -y
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -455,7 +455,7 @@ jobs:
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - 7z x tubex_test_win.zip -y
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -586,7 +586,7 @@ jobs:
        - cmake --build . --target install
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - 7z x tubex_test_win.zip -y
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
@@ -626,7 +626,7 @@ jobs:
        - cmake --build . --target install
        - cd ../..
        # Test C++ program and bundle...
-       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
+       - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip -nv
        - 7z x tubex_test_win.zip -y
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
