--- a/.travis.yml
+++ b/.travis.yml
@@ -28,17 +28,18 @@ jobs:
      os: linux
      dist: bionic
      compiler: gcc
-     services:
-       - xvfb
-       - docker
-     before_install: 
-       - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+     #services:
+     #  - xvfb
+     #  - docker
+     #before_install: 
+     #  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
      script:
          #xhost +local:$(id -un)
-         #docker run --net=host -e DISPLAY -i -v "${PWD}:/repo" lebarsfa/pi:buster-cv410 /bin/bash -c "uname -a && cat /etc/os-release && cd /repo && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./DisplayImage image.png"
-         #docker run -i -v "${PWD}/..:${PWD}/.." lebarsfa/pi:buster-cv410 /bin/bash -c "uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | xvfb-run -a ./DisplayImage image.png"
-         #docker run -i -v "${PWD}/..:${PWD}/.." lebarsfa/pi:buster-cv410 /bin/bash -c "uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && { Xvfb :99 & echo X_starting && sleep 3 ; } && export DISPLAY=:99 && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | ./DisplayImage image.png"
-       - "docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster-cv410 /bin/bash -c \"uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && { Xvfb :99 & echo X_starting && sleep 3 ; } && export DISPLAY=:99 && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | ./DisplayImage image.png \""
+         #docker run --net=host -e DISPLAY -i -v "${PWD}:/repo" lebarsfa/pi:buster-cv420 /bin/bash -c "uname -a && cat /etc/os-release && cd /repo && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./DisplayImage image.png"
+         #docker run -i -v "${PWD}/..:${PWD}/.." lebarsfa/pi:buster-cv420 /bin/bash -c "uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | xvfb-run -a ./DisplayImage image.png"
+         #docker run -i -v "${PWD}/..:${PWD}/.." lebarsfa/pi:buster-cv420 /bin/bash -c "uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && { Xvfb :99 & echo X_starting && sleep 3 ; } && export DISPLAY=:99 && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | ./DisplayImage image.png"
+       #- "docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster-cv420 /bin/bash -c \"uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && { Xvfb :99 & echo X_starting && sleep 3 ; } && export DISPLAY=:99 && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | ./DisplayImage image.png \""
+       - cmake --build .
        - ls -l ${PWD}
 #     deploy:
 #       <<: *deploy_base
