--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
          #docker run -i -v "${PWD}/..:${PWD}/.." lebarsfa/pi:buster-cv420 /bin/bash -c "uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | xvfb-run -a ./DisplayImage image.png"
          #docker run -i -v "${PWD}/..:${PWD}/.." lebarsfa/pi:buster-cv420 /bin/bash -c "uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && { Xvfb :99 & echo X_starting && sleep 3 ; } && export DISPLAY=:99 && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | ./DisplayImage image.png"
        #- "docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster-cv420 /bin/bash -c \"uname -a && cat /etc/os-release && cd ${PWD} && mkdir -p ../tst && ls -l && ls -l .. && ls -l /opt && apt-get -q update && apt-get -y install lsb-release xvfb xauth build-essential cmake && lsb_release -a && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && { Xvfb :99 & echo X_starting && sleep 3 ; } && export DISPLAY=:99 && echo wait 10 > run_test.txt && echo exit >> run_test.txt && cat run_test.txt | ./DisplayImage image.png \""
-       - cmake --build .
+       - cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build .
        - ls -l ${PWD}
      deploy:
        <<: *deploy_base
