--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,15 @@ on: [push, pull_request]
 jobs:
   Ubuntu:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build .
-      - ls -l ${PWD}
+    shell: bash
+    uses: actions/checkout@v2
+    run: |
+        cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build .
+        ls -l ${PWD}
+  Windows:
+    runs-on: windows-latest
+    shell: cmd
+    uses: actions/checkout@v2
+    run: |
+        cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build .
+        dir ${PWD}
