--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,9 +3,8 @@ jobs:
   Ubuntu:
     runs-on: ubuntu-latest
     shell: bash
-    uses: actions/checkout@v2
-  Windows:
-    runs-on: windows-latest
-    shell: cmd
-    uses: actions/checkout@v2
- 
+    steps: 
+        uses: actions/checkout@v2
+        run: |
+            cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build .
+            dir ${PWD}
