--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,10 +1,13 @@
 on: [push, pull_request]
-jobs:
-  Ubuntu:
-    runs-on: ubuntu-latest
-    shell: bash
+runs-on: ${{ matrix.os }}
+strategy:
+  matrix:
+    os: [macos-latest, windows-latest, ubuntu-18.04]
+    include:
+      - os: windows-latest
+      - shell: bash
     steps: 
         uses: actions/checkout@v2
         run: |
             cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build .
-            dir ${PWD}
+            ls -l ${PWD}
