--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -33,7 +33,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ jobs.deploy.steps.create_release.outputs.upload_url }} 
+        upload_url: ${{ deploy.steps.create_release.outputs.upload_url }} 
         asset_path: ./Hello*
         asset_name: Hello
         asset_content_type: application
