--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,10 +29,8 @@ jobs:
         cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build .
         python -c "import sys; print(sys.version)"
         ls -l ${PWD}
-    - uses: svenstaro/upload-release-action@v2
+    - uses: AButler/upload-release-assets@v2.0
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ./Hello*
-        tag: autotagname
-        overwrite: true
-        file_glob: true
+        files: '*Hello*'
+        release-tag: autotagname
