--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,5 +32,5 @@ jobs:
     - uses: AButler/upload-release-assets@v2.0
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        files: './{Release/}Hello{.exe}'
+        files: './@(Hello,Release/Hello.exe)'
         release-tag: autotagname
