--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,14 +15,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
         matrix:
-            python-version: [3.5]
+            os: [ubuntu-latest, windows-latest]
+            python-version: [3.6]
             include:
             - os: ubuntu-latest
               shell: bash
               deploy-file: ./Hello
             - os: windows-latest
               shell: bash
-              deploy-file: Debug/Hello.exe
+              deploy-file: Debug\Hello.exe
     steps: 
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
