--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,11 +13,12 @@ jobs:
         release_name: autotagname    
  build:
     runs-on: ${{ matrix.os }}
+    shell: ${{ matrix.shell }}
     strategy:
         matrix:
             os: [ubuntu-latest, windows-latest]
             python-version: [3.6]
-            shell: bash
+            shell: [bash]
             include:
             - os: ubuntu-latest
               deploy-file: Hello
