--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,9 +13,10 @@ jobs:
         tag_name: autotagname
         release_name: autotagname    
  build:
-    runs-on: ${{ matrix.os }}
+    #runs-on: ${{ matrix.os }}
     strategy:
         matrix:
+            #os: [ubuntu-latest, windows-latest]
             python-version: [3.8]
             include:
             - os: ubuntu-latest
