--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,27 +17,19 @@ jobs:
     strategy:
         matrix:
             cfg:
-            - { os: ubuntu-latest, cc: gcc, cxx: g++, platform: x32 }
-            - { os: windows-latest, cc: cl, cxx: cl, platform: x32 }
+            - { os: ubuntu-latest, cc: gcc, cxx: g++, platform: x32, deploy-file: ./Hello }
+            - { os: ubuntu-latest, container: "lebarsfa/pi:buster", deploy-file: ./Hello_pi }
+            - { os: windows-latest, cc: cl, cxx: cl, platform: x32, deploy-file: ./Debug/Hello.exe }
             python-version: [3.8]
-            include:
-            - os: ubuntu-latest
-              deploy-file: ./Hello
-#            - os: ubuntu-latest
-#              container: lebarsfa/pi:buster
-#              deploy-file: ./Hello_pi
-            - os: windows-latest
-              shell: bash
-              deploy-file: ./Debug/Hello.exe
+            shell: bash
     steps: 
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - run: uname -a ; cat /etc/os-release 
+      if: runner.os == 'Linux'
     - run: |
-        if: runner.os == 'Linux' 
-         uname -a ; cat /etc/os-release 
-        fi
         cmake . && cmake --build .
         python -c "import sys; print(sys.version)"
         ls -l ${PWD}
