--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,8 +18,8 @@ jobs:
         matrix:
             cfg:
             - { os: ubuntu-latest, cc: gcc, cxx: g++, platform: x32, deploy-file: ./Hello }
-            - { os: ubuntu-latest, container: "lebarsfa/pi:buster", deploy-file: ./Hello_pi }
-            - { os: windows-latest, cc: cl, cxx: cl, platform: x32, shell: bash, deploy-file: ./Debug/Hello.exe }
+#            - { os: ubuntu-latest, container: "lebarsfa/pi:buster", deploy-file: ./Hello_pi }
+            - { os: windows-latest, cc: cl, cxx: cl, platform: x32, deploy-file: ./Debug/Hello.exe }
             python-version: [3.8]
     steps: 
     - uses: actions/checkout@v2
@@ -32,6 +32,7 @@ jobs:
         cmake . && cmake --build .
         python -c "import sys; print(sys.version)"
         ls -l ${PWD}
+      shell: bash
     - uses: xresloader/upload-to-github-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
