--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,7 +18,7 @@ jobs:
         matrix:
             cfg:
             - { os: ubuntu-latest, cc: gcc, cxx: g++, platform: x32, deploy-file: ./Hello }
-#            - { os: ubuntu-latest, container: "lebarsfa/pi:buster", deploy-file: ./Hello_pi }
+            - { os: ubuntu-latest, container: "lebarsfa/pi:buster", deploy-file: ./Hello_pi }
             - { os: windows-latest, cc: cl, cxx: cl, platform: x32, deploy-file: ./Debug/Hello.exe }
             python-version: [3.8]
     steps: 
@@ -37,6 +37,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        file: "${{ matrix.deploy-file }}"
+        file: "${{ matrix.cfg.deploy-file }}"
         overwrite: true
         tag_name: autotagname
