--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,13 +14,15 @@ jobs:
         release_name: autotagname    
  build:
     runs-on: ${{ matrix.cfg.os }}
+    container:
+        image: lebarsfa/pi:buster
+        if: runner.os == 'Linux'
     strategy:
         matrix:
             cfg:
-            - { os: ubuntu-latest, cc: gcc, cxx: g++, platform: x32, deploy-file: ./Hello }
-            - { os: ubuntu-latest, container: "lebarsfa/pi:buster", deploy-file: ./Hello_pi }
-            - { os: windows-latest, cc: cl, cxx: cl, platform: x32, deploy-file: ./Debug/Hello.exe }
-            python-version: [3.8]
+            - { os: ubuntu-latest, deploy-file: ./Hello }
+            - { os: windows-latest, deploy-file: ./Debug/Hello.exe }
+            python-version: [3.7, 3.8]
     steps: 
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
