--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,15 +14,16 @@ jobs:
         release_name: autotagname    
  build:
     runs-on: ${{ matrix.cfg.os }}
-    container:
-        image: lebarsfa/pi:buster
-        if: runner.os == 'Linux'
     strategy:
         matrix:
             cfg:
-            - { os: ubuntu-latest, deploy-file: ./Hello }
-            - { os: windows-latest, deploy-file: ./Debug/Hello.exe }
+            - { os: ubuntu-latest, container: 'lebarsfa/pi:buster', deploy-file: ./Hello }
+            - { os: windows-latest, container: 'host', deploy-file: ./Debug/Hello.exe }
             python-version: [3.7, 3.8]
+            cmds: |
+                cmake . && cmake --build .
+                python -c "import sys; print(sys.version)"
+                ls -l ${PWD}
     steps: 
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -30,11 +31,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - run: uname -a ; cat /etc/os-release 
       if: runner.os == 'Linux'
-    - run: |
-        cmake . && cmake --build .
-        python -c "import sys; print(sys.version)"
-        ls -l ${PWD}
+    - run: ${{ matrix.cmds }}
       shell: bash
+      if: matrix.cfg.container == 'host'
     - uses: xresloader/upload-to-github-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
