--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
         image: lebarsfa/pi:buster
-        options: -i
+        options: -e
     steps: 
     - uses: actions/checkout@v2
     - run: |
