--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -41,22 +41,9 @@ jobs:
 #        tag_name: autotagname
  dockerpi:
     runs-on: ubuntu-latest
-    container: 
-        image: lebarsfa/pi:buster
-        options: -i
+#    container: 
+#        image: lebarsfa/pi:buster
+#        options: -i
     steps: 
     - uses: actions/checkout@v2
-    - run: |
-        uname -a && cat /etc/os-release && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake && lsb_release -a
-        cmake . && cmake --build .
-        python -c "import sys; print(sys.version)"
-        ls -l
-        mv ./Hello ./Hello_pi
-      shell: bash
-    - uses: xresloader/upload-to-github-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        file: "./Hello_pi"
-        overwrite: true
-        tag_name: autotagname
+    - run: docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster /bin/bash -c \"uname -a && cat /etc/os-release && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake && lsb_release -a"
