--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,17 +1,17 @@
 on: [push, pull_request]
 jobs:
  # This job can be removed if a new release should not be created...
- deploy:
-    runs-on: ubuntu-latest
-    steps: 
-    - uses: actions/create-release@v1
-      id: create_release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        draft: true
-        tag_name: autotagname
-        release_name: autotagname    
+# deploy:
+#    runs-on: ubuntu-latest
+#    steps: 
+#    - uses: actions/create-release@v1
+#      id: create_release
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      with:
+#        draft: true
+#        tag_name: autotagname
+#        release_name: autotagname    
 # matrix:
 #    runs-on: ${{ matrix.cfg.os }}
 #    strategy:
@@ -46,4 +46,4 @@ jobs:
 #        options: -i
     steps: 
     - uses: actions/checkout@v2
-    - run: docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster /bin/bash -c \"uname -a && cat /etc/os-release && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake && lsb_release -a"
+    - run: docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster /bin/bash -c \"uname -a && cat /etc/os-release && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake && lsb_release -a\"
