--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -46,4 +46,6 @@ jobs:
 #        options: -i
     steps: 
     - uses: actions/checkout@v2
-    - run: docker run -i -v "${PWD}"/..:"${PWD}/.." lebarsfa/pi:buster /bin/bash -c "uname -a && cat /etc/os-release && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake && lsb_release -a"
+    - run: |
+        docker run --rm --privileged multiarch/qemu-user-static:register --reset
+        docker run -i -v "${PWD}"/..:"${PWD}/.." lebarsfa/pi:buster /bin/bash -c "uname -a && cat /etc/os-release && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake && lsb_release -a"
