--- a/OLD/2021-01-01 (0) docker-github-actions.yml
+++ b/OLD/2021-01-01 (0) docker-github-actions.yml
@@ -1,17 +1,17 @@
 on: [push, pull_request]
 jobs:
  # This job can be removed if a new release should not be created...
-# deploy:
-#    runs-on: ubuntu-latest
-#    steps: 
-#    - uses: actions/create-release@v1
-#      id: create_release
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      with:
-#        draft: true
-#        tag_name: autotagname
-#        release_name: autotagname    
+ deploy:
+    runs-on: ubuntu-latest
+    steps: 
+    - uses: actions/create-release@v1
+      id: create_release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        draft: true
+        tag_name: autotagname
+        release_name: autotagname    
  matrix:
     runs-on: ${{ matrix.cfg.os }}
     strategy:
