--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,6 +23,8 @@ jobs:
             - { os: windows-2016, shell: cmd }
     steps: 
     - uses: actions/checkout@v2
+    - run: |
+        choco install -y wget
     - uses: actions/cache@v2
       id: cache-opencv
       with:
