--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,21 +24,27 @@ jobs:
     steps: 
     - uses: actions/checkout@v2
     - run: |
-        choco install -y wget
+        choco install -y -r --no-progress wget
+    - uses: actions/cache@v2
+      id: cache-cmake_extra_tools
+      with:
+        path: 'C:\cmake_extra_tools'
+        key: ${{ runner.os }}-cmake_extra_tools 
     - uses: actions/cache@v2
       id: cache-opencv
       with:
-        path: "C:/OpenCV4.2.0"
+        path: 'C:\OpenCV4.2.0'
         key: ${{ runner.os }}-opencv 
+    - run: |
+        wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
+        7z x cmake_extra_tools.zip -o"%SystemDrive%" -y
+       if: steps.cache-cmake_extra_tools.outputs.cache-hit != 'true'
     - run: |
         wget http://www.ensta-bretagne.fr/lebars/Share/OpenCV4.2.0_mini.zip --no-check-certificate -nv
         7z x OpenCV4.2.0_mini.zip -o"%SystemDrive%" -y
       if: steps.cache-opencv.outputs.cache-hit != 'true'
-    - run: |
-        wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
-        7z x cmake_extra_tools.zip -o"%SystemDrive%" -y
+   - run: | 
         %SystemDrive%\cmake_extra_tools\pathman /as C:\OpenCV4.2.0\x86\vc15\bin
-    - run: | 
         cmake -G "Visual Studio 15" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
         .\Release\DisplayImage.exe
     - uses: xresloader/upload-to-github-release@v1
