--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -27,8 +27,8 @@ jobs:
         sed --version
       shell: bash
     - uses: actions/checkout@v2
-    - run: |
-        choco install -y -r --no-progress wget
+#    - run: |
+#        choco install -y -r --no-progress wget
     - uses: actions/cache@v2
       id: cache-cmake_extra_tools
       with:
@@ -40,18 +40,16 @@ jobs:
         path: 'C:\OpenCV4.2.0'
         key: ${{ runner.os }}-opencv 
     - run: |
-        wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
+        C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
         7z x cmake_extra_tools.zip -o"%SystemDrive%" -y
       if: matrix.steps.cache-cmake_extra_tools.outputs.cache-hit != 'true'
     - run: |
-        wget http://www.ensta-bretagne.fr/lebars/Share/OpenCV4.2.0_mini.zip --no-check-certificate -nv
+        C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/OpenCV4.2.0_mini.zip --no-check-certificate -nv
         7z x OpenCV4.2.0_mini.zip -o"%SystemDrive%" -y
       if: matrix.steps.cache-opencv.outputs.cache-hit != 'true'
     - run: | 
         reg add HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages\OpenCV /v "OpenCV4.2.0" /d "%SystemDrive%\\OpenCV4.2.0" /f
-        dir %SystemDrive%\cmake_extra_tools
-        %SystemDrive%\cmake_extra_tools\pathman /?
-        %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin
+        %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin & true
     - run: | 
         cmake -G "Visual Studio 15" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
         .\Release\DisplayImage.exe
