--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -48,10 +48,19 @@ jobs:
         7z x OpenCV4.2.0_mini.zip -o"%SystemDrive%" -y
       if: matrix.steps.cache-opencv.outputs.cache-hit != 'true'
     - run: | 
+      # For OpenCV        
+        powershell -Command "Install-WindowsFeature Server-Media-Foundation"
+#        powerShell -Command "Add-WindowsCapability -Online -Name Tools.Graphics.DirectX*"
+#        powerShell -Command "Add-WindowsCapability -Online -Name Media.WindowsMediaPlayer*"
+#        powerShell -Command "Add-WindowsCapability -Online -Name Browser.InternetExplorer*"
+#        powerShell -Command "Add-WindowsCapability -Online -Name ServerCore.AppCompatibility*"
+        wget http://www.ensta-bretagne.fr/lebars/Share/windows_server_core_prereq.zip --no-check-certificate -nv
+        cmd //c "7z x windows_server_core_prereq.zip -o"%SystemRoot%" -y"
+    - run: | 
         reg add HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages\OpenCV /v "OpenCV4.2.0" /d "%SystemDrive%\\OpenCV4.2.0" /f
         %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin & true
     - run: | 
-        cmake -G "Visual Studio 15" -A Win32 . & cmake --build . --config Release --target DisplayImage
+        cmake -G "Visual Studio 15" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
         .\Release\DisplayImage.exe
     - uses: xresloader/upload-to-github-release@v1
       env:
